Fixed the letter spacing again.

--- a/_css-source/header.styl
+++ b/_css-source/header.styl
@@ -239,22 +239,23 @@ body.header-loaded > header
     // Since there is a line break now, the letters have to be distributed
     // differently    
     font-weight 300
-    span
-      &:nth-of-type(1)
-      &:nth-of-type(6)
-        transform translateX(-(smallest-letter-distance*2))
-      &:nth-of-type(2)
-      &:nth-of-type(7)
-        transform translateX(-(smallest-letter-distance*1))
-      &:nth-of-type(3)
-      &:nth-of-type(8)
-        transform translateX(0)
-      &:nth-of-type(4)
-      &:nth-of-type(9)
-        transform translateX((smallest-letter-distance*1))
-      &:nth-of-type(5)
-      &:nth-of-type(10)
-        transform translateX((smallest-letter-distance*2))
+    a
+      span
+        &:nth-of-type(1)
+        &:nth-of-type(6)
+          transform translateX(-(smallest-letter-distance*2))
+        &:nth-of-type(2)
+        &:nth-of-type(7)
+          transform translateX(-(smallest-letter-distance*1))
+        &:nth-of-type(3)
+        &:nth-of-type(8)
+          transform translateX(0)
+        &:nth-of-type(4)
+        &:nth-of-type(9)
+          transform translateX((smallest-letter-distance*1))
+        &:nth-of-type(5)
+        &:nth-of-type(10)
+          transform translateX((smallest-letter-distance*2))
 
 
 
